[package]
name = "steam-clip-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
keyvalues-serde = "0.2.2"
prost     = "0.13.3"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.3"
